[gd_scene load_steps=56 format=3 uid="uid://chautipuptxsr"]

[ext_resource type="Script" path="res://barkley2/rooms/r_cc.gd" id="1_wtwdn"]
[ext_resource type="Texture2D" uid="uid://co16r0idpm456" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_base_0.png" id="2_w2hsl"]
[ext_resource type="Texture2D" uid="uid://dgcwh0q0qhpbo" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_base_1.png" id="3_n05hd"]
[ext_resource type="Texture2D" uid="uid://cil7i7fabngg7" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_base_2.png" id="4_danrs"]
[ext_resource type="Texture2D" uid="uid://dhpqxruaeeflo" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_base_3.png" id="5_2suog"]
[ext_resource type="Texture2D" uid="uid://du0e15ovmkw45" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_base_4.png" id="6_crewa"]
[ext_resource type="Texture2D" uid="uid://chl23nwhh1b75" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_base_5.png" id="7_7jhaj"]
[ext_resource type="Texture2D" uid="uid://cssw60gvvbo41" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_base_6.png" id="8_do6li"]
[ext_resource type="Texture2D" uid="uid://dc17pmf0k6idl" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_emote_0.png" id="9_3580o"]
[ext_resource type="Texture2D" uid="uid://dukuldhi6nglb" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_emote_1.png" id="10_sqs4h"]
[ext_resource type="Texture2D" uid="uid://s1hj8brolltg" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_emote_2.png" id="11_3et3t"]
[ext_resource type="Texture2D" uid="uid://1ee0at520nd6" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_talk_0.png" id="12_ptjro"]
[ext_resource type="Texture2D" uid="uid://eb2rfqs6ybpt" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_talk_1.png" id="13_n4apk"]
[ext_resource type="Texture2D" uid="uid://3sxfpclea4ah" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_talk_2.png" id="14_1jm6f"]
[ext_resource type="Texture2D" uid="uid://d5qjkhlb21v0" path="res://barkley2/assets/b2_original/images/cc/s_cc_wizard_talk_3.png" id="15_sms1u"]
[ext_resource type="Texture2D" uid="uid://csbe7re716n5r" path="res://barkley2/assets/b2_original/images/cc/s_effect_smog_0.png" id="16_pogbg"]
[ext_resource type="Texture2D" uid="uid://bvei53mpti8fk" path="res://barkley2/assets/b2_original/images/cc/s_cc_textbox_backdrop_0.png" id="17_m08jc"]
[ext_resource type="Theme" uid="uid://dgl808q5lpydb" path="res://barkley2/themes/main.tres" id="17_x0byy"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_textbox.gd" id="18_eb1t7"]
[ext_resource type="Texture2D" uid="uid://dfyis3nxj6m30" path="res://barkley2/assets/b2_original/images/cc/s_cc_textbox_frames_0.png" id="19_516sa"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="20_s2777"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_zodiac.gd" id="22_be8p5"]
[ext_resource type="Texture2D" uid="uid://cb81gn30gj3jn" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_backdrop_0.png" id="23_ds2e4"]
[ext_resource type="Texture2D" uid="uid://r1w3li6jp46" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_0.png" id="24_wcd6b"]
[ext_resource type="Texture2D" uid="uid://xfforkoaosnt" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_1.png" id="25_txksi"]
[ext_resource type="Texture2D" uid="uid://hhios6tqfyi0" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_2.png" id="26_11usq"]
[ext_resource type="Texture2D" uid="uid://cv083i55tpuqu" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_3.png" id="27_qphsn"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_zodiac_wheel.gd" id="28_1qrph"]
[ext_resource type="Texture2D" uid="uid://pjitsiq2sw46" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_4.png" id="29_civrj"]
[ext_resource type="Texture2D" uid="uid://b1ewwaee67w3j" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_5.png" id="30_w5vbn"]
[ext_resource type="Texture2D" uid="uid://ccn185ubh0aki" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_6.png" id="31_pquet"]
[ext_resource type="Texture2D" uid="uid://cvjf0qclyq3d" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_7.png" id="32_n4jvo"]
[ext_resource type="Texture2D" uid="uid://cio6aeoslrd6c" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_8.png" id="33_3p5uo"]
[ext_resource type="Texture2D" uid="uid://cwtg2k7vlfwa2" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_9.png" id="34_sip5a"]
[ext_resource type="Texture2D" uid="uid://4ort333o2imh" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_10.png" id="35_80lh5"]
[ext_resource type="Texture2D" uid="uid://dbstgldbgn3m5" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_11.png" id="36_mf73p"]
[ext_resource type="Texture2D" uid="uid://clc1v4hcn2j8b" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_12.png" id="37_sroml"]
[ext_resource type="Texture2D" uid="uid://ba7m3qse4564j" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_13.png" id="38_ibiqv"]
[ext_resource type="Texture2D" uid="uid://snxsy7cmm0st" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_14.png" id="39_f83bm"]
[ext_resource type="Texture2D" uid="uid://4afb2qxkycdc" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_15.png" id="40_w8y1l"]

[sub_resource type="Animation" id="Animation_udt4g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_texture:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cc_wizard_base:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ug17v"]
resource_name = "wizard_intro"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fade_texture:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cc_wizard_base:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 0, 6]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["sn_cc_wizard_arms"],
"method": &"play_sfx"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("cc_textbox")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8q3bw"]
_data = {
"RESET": SubResource("Animation_udt4g"),
"wizard_intro": SubResource("Animation_ug17v")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_j2u3l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w2hsl")
}, {
"duration": 1.0,
"texture": ExtResource("3_n05hd")
}, {
"duration": 1.0,
"texture": ExtResource("4_danrs")
}, {
"duration": 1.0,
"texture": ExtResource("5_2suog")
}, {
"duration": 1.0,
"texture": ExtResource("6_crewa")
}, {
"duration": 1.0,
"texture": ExtResource("7_7jhaj")
}, {
"duration": 1.0,
"texture": ExtResource("8_do6li")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_wkbug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_3580o")
}, {
"duration": 1.0,
"texture": ExtResource("10_sqs4h")
}, {
"duration": 1.0,
"texture": ExtResource("11_3et3t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_lo7fh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_ptjro")
}, {
"duration": 1.0,
"texture": ExtResource("13_n4apk")
}, {
"duration": 1.0,
"texture": ExtResource("14_1jm6f")
}, {
"duration": 1.0,
"texture": ExtResource("15_sms1u")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_abx13"]
offsets = PackedFloat32Array(0, 0.0810811, 0.694981, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 0.811765, 0.811765, 0.811765, 0.901961, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dpijd"]
gradient = SubResource("Gradient_abx13")

[sub_resource type="Curve" id="Curve_ixo6u"]
max_value = 3.0
_data = [Vector2(0, 0.462518), 0.0, 0.0, 0, 0, Vector2(1, 2.97242), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7pj5b"]
curve = SubResource("Curve_ixo6u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ummrq"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector3(0, -3, 0)
scale_curve = SubResource("CurveTexture_7pj5b")
color_ramp = SubResource("GradientTexture1D_dpijd")

[sub_resource type="SpriteFrames" id="SpriteFrames_ky50d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_wcd6b")
}, {
"duration": 1.0,
"texture": ExtResource("25_txksi")
}, {
"duration": 1.0,
"texture": ExtResource("26_11usq")
}, {
"duration": 1.0,
"texture": ExtResource("27_qphsn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ibakg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_civrj")
}, {
"duration": 1.0,
"texture": ExtResource("30_w5vbn")
}, {
"duration": 1.0,
"texture": ExtResource("31_pquet")
}, {
"duration": 1.0,
"texture": ExtResource("32_n4jvo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8x43w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_3p5uo")
}, {
"duration": 1.0,
"texture": ExtResource("34_sip5a")
}, {
"duration": 1.0,
"texture": ExtResource("35_80lh5")
}, {
"duration": 1.0,
"texture": ExtResource("36_mf73p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dnuls"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_sroml")
}, {
"duration": 1.0,
"texture": ExtResource("38_ibiqv")
}, {
"duration": 1.0,
"texture": ExtResource("39_f83bm")
}, {
"duration": 1.0,
"texture": ExtResource("40_w8y1l")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="r_cc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wtwdn")
skip_hands = true
skip_name = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8q3bw")
}

[node name="cc_wizard_base" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j2u3l")
offset = Vector2(192, 120)

[node name="cc_wizard_emote" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(193, 77)
sprite_frames = SubResource("SpriteFrames_wkbug")

[node name="cc_wizard_talk" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(193, 93)
sprite_frames = SubResource("SpriteFrames_lo7fh")

[node name="cc_effect_crystal" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.25)
position = Vector2(194, 190)
process_material = SubResource("ParticleProcessMaterial_ummrq")
texture = ExtResource("16_pogbg")
lifetime = 3.0
speed_scale = 0.5

[node name="cc_textbox" type="TextureRect" parent="." node_paths=PackedStringArray("wizard_cc")]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0, 0, 0.451, 0.7)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -70.0
offset_right = 180.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("17_x0byy")
texture = ExtResource("17_m08jc")
script = ExtResource("18_eb1t7")
wizard_cc = NodePath("..")

[node name="default_type_timer" type="Timer" parent="cc_textbox"]
process_callback = 0
wait_time = 0.08
one_shot = true

[node name="textbox" type="RichTextLabel" parent="cc_textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 6.0
offset_right = -1.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_separation = 3
theme_override_fonts/normal_font = ExtResource("20_s2777")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
scroll_active = false

[node name="cc_textbox_fg" type="TextureRect" parent="cc_textbox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -41.5
offset_right = 192.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_516sa")

[node name="cc_zodiac" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("22_be8p5")

[node name="backdrop" type="TextureRect" parent="cc_zodiac"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 364.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_ds2e4")

[node name="ring_day" type="AnimatedSprite2D" parent="cc_zodiac"]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_ky50d")
script = ExtResource("28_1qrph")
button_radius = 8.0
button_position = Vector2(80, 0)
debug_color = Color(0.154603, 0.74207, 0.757142, 1)

[node name="ring_month" type="AnimatedSprite2D" parent="cc_zodiac"]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_ibakg")
script = ExtResource("28_1qrph")
button_radius = 8.0
button_position = Vector2(60, 0)

[node name="ring_year" type="AnimatedSprite2D" parent="cc_zodiac"]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_8x43w")
script = ExtResource("28_1qrph")
button_radius = 8.0
button_position = Vector2(40, 0)
debug_color = Color(0.847169, 0.597206, 0.297831, 1)

[node name="finish_button" type="AnimatedSprite2D" parent="cc_zodiac"]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_dnuls")
script = ExtResource("28_1qrph")
button_radius = 18.0
button_position = Vector2(0, 0)

[node name="fade_texture" type="ColorRect" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="cc_textbox/default_type_timer" to="cc_textbox" method="_on_default_type_timer_timeout"]
